--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^8.7.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "primevue": "^3.52.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
